# ArduinoLearning

task2/demuliplexer/: test.c  test.elf
task2/demultiplexer/: CMakeLists.txt  navigation_crosscompile.cmake  test.hex
task2/muliplexer/: test.c  test.hex
task2/multiplexer/: test.elf
task3/: test.c  test.elf  test.hex
task4/: test.c  test.elf  test.hex
task5/: test.c  test.elf  test.hex
